--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,3 +1,6 @@
 # For randomizing key mappings
 public net.minecraft.client.KeyMapping f_90809_ # ALL
 public com.mojang.blaze3d.platform.InputConstants$Key f_84857_ # NAME_MAP
+
+# For random uncrouching
+public net.minecraft.world.entity.Entity m_20175_(Lnet/minecraft/world/entity/Pose;)Z # canEnterPose
