--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -4,3 +4,7 @@ public com.mojang.blaze3d.platform.InputConstants$Key f_84857_ # NAME_MAP
 
 # For random uncrouching
 public net.minecraft.world.entity.Entity m_20175_(Lnet/minecraft/world/entity/Pose;)Z # canEnterPose
+
+# For adding goals after entity init
+public net.minecraft.world.entity.Mob f_21345_ # goalSelector
+public net.minecraft.world.entity.Mob f_21346_ # targetSelector
