Added fake xray

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -8,3 +8,9 @@ public net.minecraft.world.entity.Entity m_20175_(Lnet/minecraft/world/entity/Po
 # For adding goals after entity init
 public net.minecraft.world.entity.Mob f_21345_ # goalSelector
 public net.minecraft.world.entity.Mob f_21346_ # targetSelector
+
+# There is probably a better way to iterate over every loaded chunk on the client but I do not care
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage f_104466_ # chunks
+public net.minecraft.client.multiplayer.ClientChunkCache f_104410_ # storage
+public net.minecraft.client.multiplayer.ClientChunkCache$Storage f_104471_ # chunkCount
