--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -14,3 +14,6 @@ public net.minecraft.client.multiplayer.ClientChunkCache$Storage
 public net.minecraft.client.multiplayer.ClientChunkCache$Storage f_104466_ # chunks
 public net.minecraft.client.multiplayer.ClientChunkCache f_104410_ # storage
 public net.minecraft.client.multiplayer.ClientChunkCache$Storage f_104471_ # chunkCount
+
+# This could lead to some trouble down the way! (because it is protected)
+public net.minecraft.world.entity.Entity m_20260_(Z)V # setShiftKeyDown
