Added rocket creeper

--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -17,3 +17,9 @@ public net.minecraft.client.multiplayer.ClientChunkCache$Storage f_104471_ # chu
 
 # This could lead to some trouble down the way! (because it is protected)
 public net.minecraft.world.entity.Entity m_20260_(Z)V # setShiftKeyDown
+
+# This is being used to expose a way to easily detonate a creeper
+public net.minecraft.world.entity.monster.Creeper m_32315_()V # explodeCreeper
+
+# This is currently being used to position the creeper's head in a right way when it comes down as a missile
+public net.minecraft.client.model.CreeperModel f_102451_ # head
