--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -23,3 +23,6 @@ public net.minecraft.world.entity.monster.Creeper m_32315_()V # explodeCreeper
 
 # This is currently being used to position the creeper's head in a right way when it comes down as a missile
 public net.minecraft.client.model.CreeperModel f_102451_ # head
+
+# This is needed for the fake blocks
+public net.minecraft.world.level.block.state.BlockBehaviour f_60439_ # properties
