--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -26,3 +26,4 @@ public net.minecraft.client.model.CreeperModel f_102451_ # head
 
 # This is needed for the fake blocks
 public net.minecraft.world.level.block.state.BlockBehaviour f_60439_ # properties
+public net.minecraft.world.level.block.state.BlockBehaviour$Properties f_60889_ # requiresCorrectToolForDrops
